--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ flutter:
    - images/business.jpg
    - images/traffic.jpg
    - images/map.jpg
+   - images/pay.png
+   - images/request.png
+   - images/topup.png
+   - images/rewards.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
