--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ flutter:
    - images/request.png
    - images/topup.png
    - images/rewards.png
+   - images/bulb.png
+   - images/plumbing.png
+   - images/painting.png
+   - images/cleaning.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
